Seccion PreAlerta + Filtro por Status DataTable + Modal Detalle

--- a/src/app/aaacesa/prealertas/prealertas.component.scss
+++ b/src/app/aaacesa/prealertas/prealertas.component.scss
@@ -28,6 +28,10 @@
 .u-small-text  {
     font-size: 0.8rem !important;
 }
+.detail-text {
+    font-size: 0.8rem !important;
+    line-height: 1rem;
+}
 
 
 // Fix position for swtich input
