--- a/src/app/aaacesa/previos/previos.component.scss
+++ b/src/app/aaacesa/previos/previos.component.scss
@@ -62,13 +62,14 @@ table{
     background: #191c37;
     border: none;
 }
-.btn{
-    line-height: 0;
-    font-size: small;
-    padding: 0;
-    border: none;
-    display: flex;
-}
-.btn-outline-light {
-    color: #b0b0b0;
-}
+
+// .btn{
+//     line-height: 0;
+//     font-size: small;
+//     padding: 0;
+//     border: none;
+//     display: flex;
+// }
+// .btn-outline-light {
+//     color: #b0b0b0;
+// }
