--- a/src/app/aaacesa/abandono/abandono.component.scss
+++ b/src/app/aaacesa/abandono/abandono.component.scss
@@ -1,9 +1,6 @@
-.dropup .dropdown-menu {
-    transform: none!important;
-  }
-  
+
 table{
-    font-size:  0.75em;
+    font-size:  0.9em;
 }
 .table th, .table td {
     border-top: 1px solid #646880;
@@ -45,20 +42,58 @@ table{
     font-size: 0.75em;   
 }
 
-// .input-group-text {
-// }
 
-.buscar-icon{
-    -webkit-box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    -moz-box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    background: #191c37;
-    border: none; 
+.btn-prealerta {
+    background: transparent;
+    border-radius: 50px;
+    margin: 2px 2px;
+    color: white;
+    padding: 2px 10px;
 }
-.buscar-place{
-    -webkit-box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    -moz-box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    box-shadow: 7px 7px 3px 0px rgba(25, 28, 55, 0.904);
-    background: #191c37;
-    border: none;
+
+.btn-circle {
+    border-radius: 50%;
+    margin-right: 5px;
 }
+
+.u-color-primary {
+    //TODO change to var $color-primary
+    color: #FB600A;
+}
+
+
+// Font size fixes
+.card {
+    font-size: 0.8rem;
+}
+.form-control {
+    font-size: 0.8rem;
+}
+.u-small-text  {
+    font-size: 0.8rem !important;
+}
+.detail-text {
+    font-size: 0.8rem !important;
+    line-height: 1rem;
+}
+
+
+// Fix position for swtich input
+.form-switch {
+    position: absolute;
+    right: 0.5rem;
+}
+
+.modal { overflow-y: auto !important; }
+
+/*Select Input */
+.styled-select {
+    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
+    overflow: hidden;    
+
+    & select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
+}  
