--- a/src/app/views/resetpassword/resetpassword.component.html
+++ b/src/app/views/resetpassword/resetpassword.component.html
@@ -8,24 +8,22 @@
                 <div class="card-body">
                   <form #resetPasswForm="ngForm">
                     <h2>Cambiar contraseña</h2>
-                    <p class="text-muted" *ngIf="!mostrar">Ingresa tu nueva contraseña</p>
-                    <div class="input-group mb-3" *ngIf="!mostrar">
+                    <p class="text-muted">Ingresa tu nueva contraseña</p>
+                    <div class="input-group mb-3">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="icon-lock"></i></span>
                       </div>
-                      <input type="password" class="form-control" 
-                      [(ngModel)]="newPassword" #newPasswordT="ngModel"
-                      id="newPassword1" name="newPassword" 
+                      <input type="password" class="form-control" [(ngModel)]="newPassword" #nPasswordT="ngModel" id="nPasswordT" name="nPasswordT" 
                       placeholder="Nueva contraseña" autocomplete="Nueva contraseña" required>
                     </div>
-                    <div *ngIf="newPasswordT.invalid && (newPasswordT.dirty || newPasswordT.touched)"
+                    <div *ngIf="nPasswordT.invalid && (nPasswordT.dirty || nPasswordT.touched)"
                         class="alert alert-danger">
-                      <div *ngIf="newPasswordT?.errors.required">
+                      <div *ngIf="nPasswordT?.errors.required">
                         Contraseña requerida.
                       </div>
                   </div>
                     <div class="row">
-                      <div class="col-6" *ngIf="!mostrar">
+                      <div class="col-6">
                         <button type="submit"  class="btn btn-primary px-4" (click)="resetPassword($event)" [disabled]="resetPasswForm.invalid" >Cambiar</button>
                       </div>
                       <div class="col-6 text-right">
@@ -34,11 +32,9 @@
                     </div>
                     <div class="row">
                       <div class="col-12 text-center">
-                          
                           <div *ngIf="validar">
                              {{message}}
                           </div>
-                          
                       </div>
                     </div>
                   </form>
