--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -43,7 +43,7 @@
                   </div>
                   <div class="row">
                     <div class="col-6">
-                      <button type="submit"  class="btn btn-primary px-4" (click)="login($event)" [disabled]="loginForm.invalid">Entrar</button>
+                      <button type="submit"  class="btn btn-primary px-4" (click)="login($event)" [disabled]="loginForm.invalid" data-style="expand-right">Entrar</button>
                     </div>
                     <div class="col-6 text-right">
                       <button type="button" class="btn btn-link px-0" (click)="onRecoveryPassword()" >¿Olvidaste tu contraseña?</button>
