--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,11 +1,11 @@
 // Here you can add other styles
-// Here you can add other styles
 .app-header{
     background-color: #30376A;
     z-index: 1019;
     height: 68px;
     border-bottom: none;
-    box-shadow: 0 10px 5px #131528; 
+    box-shadow: 0 5px 5px #282c52; 
+    color: #FFF;
 }
 .app-header .navbar-brand {
     width: 200px;
@@ -19,7 +19,7 @@
     margin-top: 68px;
 }
 
-
+//sidebar
 .sidebar{
     background-color: #212649;
     z-index: 1020;
@@ -49,6 +49,158 @@
     color: #ffffff;
 }
 
+//breadcrum
 .breadcrumb {
     border-bottom: none;
 }
+.breadcrumb-item.active{
+    font-weight: bolder;
+}
+
+//Table
+table{
+    font-size:  0.9em;
+}
+.table th, .table td {
+    border-top: 1px solid #646880;
+    color: #212649;
+}
+.table thead th {
+    border-bottom: 2px solid #646880;
+    border-top: none;
+    color: #212649;
+}
+
+
+//datepicker
+.bs-datepicker {
+    display: flex;
+    align-items: stretch;
+    flex-flow: row wrap;
+    background: #fff;
+    box-shadow: 0 0 10px 0 #aaa;
+    position: relative;
+    z-index: 1;
+}
+
+//customButtons
+.btn-prealerta {
+    background: transparent;
+    border-radius: 50px;
+    margin: 2px 2px;
+    color: white;
+    padding: 2px 10px;
+}
+
+.btn-circle {
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.u-color-primary {
+    //TODO change to var $color-primary
+    color: #FB600A;
+}
+
+
+// Font size fixes
+.card {
+    font-size: 0.8rem;
+}
+.form-control {
+    font-size: 0.8rem;
+}
+.u-small-text  {
+    font-size: 0.8rem !important;
+}
+.detail-text {
+    font-size: 0.8rem !important;
+    line-height: 1rem;
+}
+
+
+// Fix position for swtich input
+.form-switch {
+    position: absolute;
+    right: 0.5rem;
+}
+
+//Modals
+.modal { 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/*Select Input */
+.styled-select {
+    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
+    overflow: hidden;    
+
+    & select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
+}  
+
+/* Status Filters Bar */
+.status-filter {    
+    position: relative;    
+    font-size: .8rem;    
+
+    &:not(:last-child) {
+        border-right: 2px solid white;  
+    }    
+
+    &__number {
+        font-weight: bold;
+    }
+
+    &__text {
+        display: inline-block;
+    }    
+
+    &__check {        
+        margin-left: .5rem;
+    }   
+
+    &__circle {
+        display: inline-block;
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;                       
+        margin-right: 10px;
+        background-color: white;
+
+        &--Aceptada {
+            background-color: #2ee836;
+        }
+
+        &--Solicitada {
+            background-color: #18EDED;            
+        }
+
+        &--PAAACESA{
+            background-color: #fff500;
+        }
+        &--PCliente{
+            background-color: #ef5500;
+        }
+        &--Rechazada{
+            background-color: #ff0000;
+        }
+        &--Finalizada{
+            background-color: #596df2;
+        }
+    }
+}
+
+.ellipsis {
+    text-overflow: ellipsis;
+  
+    /* Required for text-overflow to do anything */
+    white-space: nowrap;
+    overflow: hidden;
+  }
