--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,38 +1,30 @@
 // Variable overrides
 // Generales
-$body-bg:    #191C37;
-$body-color:  	#FFFF;
+$body-bg:    #FFFF;
+$body-color:  	#212649;
 $font-size-base: 1rem;
 
-// Cards Colors
-$card-bg: #212649;
-$card-border-color: #212649;
-$card-cap-bg: #212649;
-$card-spacer-x: 2rem;
-$card-spacer-y: 2rem;
-$card-border-radius: 10px;
-
 // Breadcrumb
-$breadcrumb-active-color: #AF4919;
+$breadcrumb-active-color: #D00A2A;
 $breadcrumb-bg: transparent;
 $breadcrumb-divider: none;
 
 //Modals
-$modal-content-bg: #212649;
-$modal-content-border-color: #212649;
-$modal-header-border-color: #212649;
-$modal-footer-border-color: #212649;
-$modal-dialog-margin-y-sm-up: 15rem;
+$modal-content-bg: #FFFF;
+$modal-content-border-color: #FFFF;
+$modal-header-border-color: #FFFF;
+$modal-footer-border-color: #FFFF;
+// $modal-dialog-margin-y-sm-up: 15rem;
 
 //Forms
 $input-bg: transparent;
-$input-color: #FFFF;
+$input-color: #191C37;
 $input-border-color: #646880;
 $input-border-radius: 15px;
 $input-placeholder-color: #646880;
 $input-focus-border-color:#B2B3C0;
 $input-focus-box-shadow: #B2B3C0;
-$input-disabled-bg: #191C37;
+$input-disabled-bg: #646880;
 $input-group-addon-bg: transparent;
 $input-group-addon-color:#646880;
 
@@ -40,8 +32,14 @@ $input-group-addon-color:#646880;
 //Dropdowns
 $dropdown-bg: #191C37;
 $dropdown-border-color: none;
-$dropdown-divider-bg: none;
+$dropdown-divider-bg: #191C37;
 $dropdown-link-hover-bg:#212649;
+
+$dropdown-header-color: #191C37;
+
+//table
+$table-head-color: #646880;
+$table-dark-bg: #646880;
 
 
 $theme-colors:(
@@ -50,5 +48,6 @@ $theme-colors:(
     succes: #0AA010,
     info: #18EDED,
     warning: #E2DA0C,
-    danger: #CD0428
+    danger: #CD0428,
+    link:#212649
 );
