--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,23 +82,28 @@ small {
   margin: 0;
 }
 
+//Cards
 .card {
   position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #212649;
-  background-clip: border-box;
-  border: 1px solid #212649;
-  border-radius: 1px;
+  color: #212649;
+  background-color: #FFF;
+  // background-clip: border-box;
+  border: none;
+  -webkit-box-shadow: 0px 0px 10px 1px #9EA6B1;
+  -moz-box-shadow: 0px 0px 10px 1px #9EA6B1;
+  box-shadow: 0px 0px 10px 1px #9EA6B1; 
+  border-radius: 5px;
 }
 
 .card-header {
   padding: 1rem 1rem;
   margin-bottom: 0;
-  background-color: #212649;
-  border-bottom: 1px solid #212649;
+  background-color: #FFF;
+  border-bottom: none;
 }
 
 .card-body {
@@ -106,14 +111,28 @@ small {
   padding: 1rem;
 }
 
+//Links
 .page-item.active .page-link {
-  background-color: #ed0e19 !important;
-  border-color: #ed0e19 !important;
+  background-color: #212649 !important;
+  border-color: #212649 !important;
   border-radius: 100% !important;
 }
 .page-link{
   border-radius: 100% !important;
 }
+
+.page-item.disabled .page-link{
+  border-radius: 0;
+  background: none;
+  border: none;
+}
+
+//paginador
+
+.pagination li a {
+  background-color:#eaa;
+}
+
 .lastfirst{
   border-radius: 0;
   background: none;
@@ -136,8 +155,3 @@ small {
   border: none;
 }
 
-.page-item.disabled .page-link{
-  border-radius: 0;
-  background: none;
-  border: none;
-}
