--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -7,7 +7,7 @@
   [mobileAsideMenuToggler]="false">
   
   
-  <span class="label label-default d-none d-lg-block small">Bienvenido! {{user}}</span>
+  <span class="label label-default d-none d-lg-block small">Bienvenido! {{user}} | <small class="text-muted">Última sesión martes 19/abril/2019 | hora: 09:24:56</small> </span>
   
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown d-md-down-none" dropdown placement="bottom right">
