--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -125,12 +125,13 @@ small {
   border-radius: 0;
   background: none;
   border: none;
+  color: #191c37;
 }
 
 //paginador
 
 .pagination li a {
-  background-color:#eaa;
+  background-color:#212649;
 }
 
 .lastfirst{
@@ -151,7 +152,8 @@ small {
 
 .lastfirst{
   border-radius: 0;
-  background: none;
+  background: none !important;
   border: none;
+  color: #303666;
 }
 
