--- a/src/app/aaacesa/abandono/abandono.component.scss
+++ b/src/app/aaacesa/abandono/abandono.component.scss
@@ -1,99 +1,99 @@
 
-table{
-    font-size:  0.9em;
-}
-.table th, .table td {
-    border-top: 1px solid #646880;
-    color: #b8bcd6;
-}
-.table thead th {
-    border-bottom: 2px solid #646880;
-    border-top: none;
-    color: #ffffff;
-}
-.page-item.active .page-link {
-    background-color: #ed0e19 !important;
-    border-color: #ed0e19 !important;
-    border-radius: 100% !important;
-    color: #ffffff;
-}
-.page-link{
-    border-radius: 100% !important;
-}
+// table{
+//     font-size:  0.9em;
+// }
+// .table th, .table td {
+//     border-top: 1px solid #646880;
+//     color: #b8bcd6;
+// }
+// .table thead th {
+//     border-bottom: 2px solid #646880;
+//     border-top: none;
+//     color: #ffffff;
+// }
+// .page-item.active .page-link {
+//     background-color: #ed0e19 !important;
+//     border-color: #ed0e19 !important;
+//     border-radius: 100% !important;
+//     color: #ffffff;
+// }
+// .page-link{
+//     border-radius: 100% !important;
+// }
 
-.iconfilt{
-    padding-top: 0%;
-    padding-left: 5%;
-    font-size: 1.3em !important;
-    color: #b8bcd6;
-    transform: translateY(27%);
-}
-.bs-datepicker {
-    display: flex;
-    align-items: stretch;
-    flex-flow: row wrap;
-    background: #fff;
-    box-shadow: 0 0 10px 0 #aaa;
-    position: relative;
-    z-index: 1;
-}
+// .iconfilt{
+//     padding-top: 0%;
+//     padding-left: 5%;
+//     font-size: 1.3em !important;
+//     color: #b8bcd6;
+//     transform: translateY(27%);
+// }
+// .bs-datepicker {
+//     display: flex;
+//     align-items: stretch;
+//     flex-flow: row wrap;
+//     background: #fff;
+//     box-shadow: 0 0 10px 0 #aaa;
+//     position: relative;
+//     z-index: 1;
+// }
 
-.form-control {
-    font-size: 0.75em;   
-}
-
-
-.btn-prealerta {
-    background: transparent;
-    border-radius: 50px;
-    margin: 2px 2px;
-    color: white;
-    padding: 2px 10px;
-}
-
-.btn-circle {
-    border-radius: 50%;
-    margin-right: 5px;
-}
-
-.u-color-primary {
-    //TODO change to var $color-primary
-    color: #FB600A;
-}
+// .form-control {
+//     font-size: 0.75em;   
+// }
 
 
-// Font size fixes
-.card {
-    font-size: 0.8rem;
-}
-.form-control {
-    font-size: 0.8rem;
-}
-.u-small-text  {
-    font-size: 0.8rem !important;
-}
-.detail-text {
-    font-size: 0.8rem !important;
-    line-height: 1rem;
-}
+// .btn-prealerta {
+//     background: transparent;
+//     border-radius: 50px;
+//     margin: 2px 2px;
+//     color: white;
+//     padding: 2px 10px;
+// }
+
+// .btn-circle {
+//     border-radius: 50%;
+//     margin-right: 5px;
+// }
+
+// .u-color-primary {
+//     //TODO change to var $color-primary
+//     color: #FB600A;
+// }
 
 
-// Fix position for swtich input
-.form-switch {
-    position: absolute;
-    right: 0.5rem;
-}
+// // Font size fixes
+// .card {
+//     font-size: 0.8rem;
+// }
+// .form-control {
+//     font-size: 0.8rem;
+// }
+// .u-small-text  {
+//     font-size: 0.8rem !important;
+// }
+// .detail-text {
+//     font-size: 0.8rem !important;
+//     line-height: 1rem;
+// }
 
-.modal { overflow-y: auto !important; }
 
-/*Select Input */
-.styled-select {
-    background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
-    overflow: hidden;    
+// // Fix position for swtich input
+// .form-switch {
+//     position: absolute;
+//     right: 0.5rem;
+// }
 
-    & select {
-        -webkit-appearance: none;
-        -moz-appearance: none;
-        appearance: none;
-    }
-}  
+// .modal { overflow-y: auto !important; }
+
+// /*Select Input */
+// .styled-select {
+//     background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;    
+//     overflow: hidden;    
+
+//     & select {
+//         -webkit-appearance: none;
+//         -moz-appearance: none;
+//         appearance: none;
+//     }
+// }  
