--- a/src/app/aaacesa/prealertas/prealertas.component.scss
+++ b/src/app/aaacesa/prealertas/prealertas.component.scss
@@ -4,12 +4,12 @@ table{
 }
 .table th, .table td {
     border-top: 1px solid #646880;
-    color: #b8bcd6;
+    color: #07080f;
 }
 .table thead th {
     border-bottom: 2px solid #646880;
     border-top: none;
-    color: #ffffff;
+    color: #212649;
 }
 .page-item.active .page-link {
     background-color: #ed0e19 !important;
@@ -55,9 +55,13 @@ table{
     margin-right: 5px;
 }
 
+// Utilities
 .u-color-primary {
     //TODO change to var $color-primary
     color: #FB600A;
+}
+.break-word {
+    word-break: break-all;
 }
 
 
