--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -14,7 +14,7 @@
       <div class="row mb-3">
         <div class="col-md-4 offset-md-8">
           <mat-form-field class="input-full-width">
-            <input matInput type="text" class="form-control" [(ngModel)]="filterQuery" placeholder="Buscar..." />
+            <input matInput (keyup)="applyFilter($event.target.value)" type="text" class="form-control" placeholder="Buscar..." />
             <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
           </mat-form-field>
         </div>
@@ -22,36 +22,62 @@
       <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-          <!-- Position Column -->
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+          <!-- Nombre Column -->
+          <ng-container matColumnDef="nombre">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+            <td mat-cell *matCellDef="let element"> {{element.Nombre}} {{element.Paterno}} {{element.Materno}} </td>
           </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <!-- Telefono Column -->
+          <ng-container matColumnDef="telefono">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Teléfono </th>
+            <td mat-cell *matCellDef="let element"> {{element.Telefono}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
-          <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Weight </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+          <!-- RFC Column -->
+          <ng-container matColumnDef="rfc">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> RFC </th>
+            <td mat-cell *matCellDef="let element"> {{element.RFC}} </td>
           </ng-container>
 
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+          <!-- Patente Column -->
+          <ng-container matColumnDef="patente">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Patente </th>
+            <td mat-cell *matCellDef="let element"> {{element.ClavePatente}} </td>
+          </ng-container>
+
+          <!-- Perfil Column -->
+          <ng-container matColumnDef="perfil">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Perfil </th>
+            <td mat-cell *matCellDef="let element"> {{element.Perfil[0].CvePerfil}} </td>
+          </ng-container>
+
+          <!-- Activo Column -->
+          <ng-container matColumnDef="activo">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Activo </th>
+            <td mat-cell *matCellDef="let element">
+              <label class="switch switch-label switch-pill switch-outline-secondary" style="padding-top:8px;">
+                <input type="checkbox" class="switch-input" [checked]="element.Autenticacion[0].CveEstatus == 'A'">
+                <span class="switch-slider" data-checked="&#x2713;" data-unchecked="&#x2715;"></span>
+              </label>
+            </td>
+          </ng-container>
+
+          <!-- Acciones Column -->
+          <ng-container matColumnDef="acciones">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Acciones </th>
+            <td mat-cell *matCellDef="let element"> <a class="btn btn-ghost-link btn-pill" (click)="detalleUSer(element.Id)" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a> </td>
           </ng-container>
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-
+        <mat-paginator [length]="100"
+                       [pageSize]="10"
+                       [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
       </div>
-      <div class="table-responsive">
+      <!--<div class="table-responsive">
         <table class="table" [mfData]="data | dataFilter : filterQuery" #mf="mfDataTable" [mfRowsOnPage]="10">
           <thead>
             <tr>
@@ -114,7 +140,7 @@
           </tfoot>
         </table>
         <div class="table-responsive"></div>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
